rnsc/test_data/integration/error/parser/class_header/access_flags/strict.rns
.class strict HelloWorld
.super java/lang/Object
.class_end
